fix: remove <all_urls> from manifest > permissions

--- a/packages/extension/package.json
+++ b/packages/extension/package.json
@@ -84,8 +84,7 @@
   },
   "manifest": {
     "permissions": [
-      "storage",
-      "<all_urls>"
+      "storage"
     ],
     "host_permissions": [
       "https://*/*",
