--- a/packages/extension/package.json
+++ b/packages/extension/package.json
@@ -13,7 +13,7 @@
   "displayName:pt": "UTags - Adicionar tags de usuário aos links",
   "displayName:vi": "UTags - Thêm tag người dùng vào liên kết",
   "displayName:ru": "UTags - Добавление пользовательских тегов к ссылкам",
-  "version": "0.29.1",
+  "version": "0.30.0",
   "description": "Add custom tags or notes to links such as users, posts and videos. It works on X, Facebook, Youtube, TikTok, Reddit and many sites.",
   "description_userscript": "Enhance your browsing experience by adding custom tags and notes to users, posts, and videos across the web. Perfect for organizing content, identifying users, and filtering out unwanted posts. Also functions as a modern bookmark management tool. Supports 100+ popular websites including X (Twitter), Reddit, Facebook, Threads, Instagram, YouTube, TikTok, GitHub, Hacker News, Greasy Fork, pixiv, Twitch, and many more.",
   "description_userscript:zh-CN": "为网页上的用户、帖子、视频添加自定义标签和备注，让你的浏览体验更加个性化和高效。轻松识别用户、整理内容、过滤无关信息。同时也是一个现代化的书签管理工具。支持 100+ 热门网站，包括 V2EX、X (Twitter)、YouTube、TikTok、Reddit、GitHub、B站、抖音、小红书、知乎、掘金、豆瓣、吾爱破解、pixiv、LINUX DO、小众软件、NGA、BOSS直聘等。",
@@ -48,10 +48,13 @@
     "dev:userscript": "node scripts/userscript/watch.mjs",
     "staging": "run-p staging:*",
     "staging:userscript": "node scripts/userscript/build.mjs --staging && pnpm prettier --log-level warn --write build/userscript-staging/",
+    "staging:userscript-no-adult": "node scripts/userscript/build-no-adult.mjs --staging && pnpm prettier --log-level warn --write build/userscript-no-adult-staging/",
     "build": "run-s build:*",
     "build:chrome": "cross-env PARCEL_WORKER_BACKEND=process plasmo build && node scripts/chrome/update-manifest.mjs",
     "build:firefox": "cross-env PARCEL_WORKER_BACKEND=process plasmo build --target=firefox-mv2 && node scripts/firefox/update-manifest.mjs && addons-linter build/firefox-mv2-prod/",
     "build:userscript": "node scripts/userscript/build.mjs && pnpm prettier --log-level warn --write build/userscript-prod/",
+    "build:userscript-no-adult": "node scripts/userscript/build-no-adult.mjs && pnpm prettier --log-level warn --write build/userscript-no-adult-prod/",
+    "build:userscript-full": "node scripts/userscript/build-full.mjs && pnpm prettier --log-level warn --write build/userscript-full-prod/",
     "package": "run-s package:*",
     "package:chrome": "plasmo package",
     "package:firefox": "plasmo package --target=firefox-mv2 && addons-linter build/firefox-mv2-prod.zip",
